--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,30 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "aiohttp>=3.13.3",
+    "beautifulsoup4>=4.14.3",
+    "fastapi[standard]>=0.128.0",
+    "fastembed>=0.7.4",
+    "gradio>=6.4.0",
+    "langchain>=1.2.7",
+    "langchain-text-splitters>=1.1.0",
+    "loguru>=0.7.3",
+    "lxml>=6.0.2",
+    "markdown>=3.10.1",
+    "markdownify>=1.2.2",
+    "openai>=2.15.0",
+    "opik>=1.9.100",
+    "prefect>=3.6.13",
+    "psutil>=7.2.1",
+    "psycopg2-binary>=2.9.11",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "python-dotenv>=1.2.1",
+    "qdrant-client>=1.16.2",
+    "sqlalchemy>=2.0.46",
+    "supabase>=2.27.2",
+    "uvloop>=0.22.1",
+]
